<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="?android:attr/colorLongPressedHighlight">

    <Button
        android:id="@+id/btnRockets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rockets" />

    <Button
        android:id="@+id/btnLaunches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launches" />

    <Button
        android:id="@+id/btnNextLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_launch" />

    <Button
        android:id="@+id/btnLatestLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latest_launch" />

    <Button
        android:id="@+id/btnShips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ships" />

    <Button
        android:id="@+id/btnCapsule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capsule" />

</LinearLayout>